# Insurance-Policy-RAG

./: .gitignore  pyproject.toml
chroma_db/: chroma.sqlite3
src/: answer_gen.py  chunking.py  embed_store.py  execute_r2.py  main.py  query_translate.py  r2_client.py  retrieval.py
src/chroma_db/: chroma.sqlite3
src/model/: schema.py
src/r2/: execute_for_r2.py  r2_client.py
src/rag/: main.py
streamlit/: app.py
