[project]
name = "insurance-policy-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.4",
    "botocore>=1.42.4",
    "langchain>=1.1.2",
    "langchain-text-splitters>=0.3.2",
    "llama-index>=0.9.48",
    "llama-parse>=0.6.88",
    "python-dotenv>=1.2.1",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
]
